--- a/html/prblem-three.html
+++ b/html/prblem-three.html
@@ -20,6 +20,9 @@
             
         </select>
 
+        <button onclick="loadAllCountry()" class="btn btn-outline">All Country</button>
+
+
         <select id="capitalContainer" onchange="loadByCapital()" class="select select-accent w-full max-w-xs">
             <option disabled selected>Search by Capital</option>
             
